src/parser/snapshots/monkey_language_server__parser__test__int_expr.snap
---
source: src/parser/test.rs
description: "123"
expression: result
---
[
    Int {
        token: Token(Int, "123", (0,0)->(0,3)),
        value: 123,
    },
]

===================================

123
