src/parser/snapshots/monkey_language_server__parser__test__int_expr_errors.snap
---
source: src/parser/test.rs
description: "123"
expression: "parser_errors(\"123\", errors)"
---
123
