src/parser/snapshots/monkey_language_server__parser__test__let_statement_1.snap
---
source: src/parser/test.rs
description: let x = 1;
expression: result
---
[
    Let {
        token: Token(Let, "let", (0,0)->(0,3)),
        name: Identifier {
            token: Token(Identifier, "x", (0,4)->(0,5)),
            name: "x",
        },
        value: Int {
            token: Token(Int, "1", (0,8)->(0,9)),
            value: 1,
        },
    },
]

===================================

let x = 1;
