src/parser/snapshots/monkey_language_server__parser__test__let_statement_1_errors.snap
---
source: src/parser/test.rs
description: let x = 1;
expression: "parser_errors(\"let x = 1;\", errors)"
---
let x = 1;
