src/parser/snapshots/monkey_language_server__parser__test__let_statement_2_errors.snap
---
source: src/parser/test.rs
description: let x = 2;;;
expression: "parser_errors(\"let x = 2;;;\", errors)"
---
let x = 2;;;
