src/parser/snapshots/monkey_language_server__parser__test__lexer_erro_errors.snap
---
source: src/parser/test.rs
description: "@"
expression: "parser_errors(\"@\", errors)"
---
@
^ SyntaxError: Unexpected '@'.
