src/parser/snapshots/monkey_language_server__parser__test__mixed_errors.snap
---
source: src/parser/test.rs
description: "let foo = 1;\n[1, 2];"
expression: "parser_errors(\"let foo = 1;\\n[1, 2];\", errors)"
---
let foo = 1;
[1, 2];
